tests/miniJava/neg/000214_mutation.MiniJava
class java { public static int [] Main ( String [ ] java ) { { } } }
